test/Serialization/failed-partial-module.code
// RUN: %empty-directory(%t)

// Make sure we don't crash if we fail to load a partial module.
// RUN: %target-language-frontend -emit-module -primary-file %s -module-name A -o %t/a.partial.codemodule
// RUN: not %target-language-frontend -emit-module -merge-modules %t/a.partial.codemodule -module-name Unrelated 2>&1 | %FileCheck %s

// CHECK: error: cannot load module 'A' as 'Unrelated'
